Multiple fixes Flake8 fixes in dlux/auth and dlux/dashboards/network/connections Fixed requirements.txt and test-requirements.txt

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,13 @@ downloadcache = ~/cache/pip
 builtins = _
 exclude =   .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,
             build,panel_template,dash_template,local_settings.py
+# E127 continuation line over-indented for visual indent
+# E128 continuation line under-indented for visual indent
+# H701 empty localization string
+# H702 Formatting operation should be outside of localization method call
+# H803 git commit title should not end with period (disabled on purpose, see bug #1236621)
+# H302 import only modules.'from dlux.exceptions import AuthException' does not import a module
+ignore = E127,E128,H701,H702,H803,H302
 
 [hacking]
 import_exceptions = collections.defaultdict,
