--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,6 @@ horizon.egg-info
 dlux/test/.secret_key_store
 doc/build/
 doc/source/sourcecode
-/static/
 .venv
 .tox
 build
@@ -30,3 +29,8 @@ openstack_dashboard/dummydb.sqlite
 dlux/local/.secret_key_store
 dlux/local/local_settings.py
 .idea
+
+#Complied Static Files
+static/*/css
+static/*/js
+
