--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,12 @@ language: python
 python:
   - "2.6"
   - "2.7"
+cache: pip
 install: "pip install -r requirements.txt -r test-requirements.txt"
-script: tox -e pep8
-        "./run_tests.sh -c --with-selenium"
+script: 
+  - tox -e pep8
+  - "./run_tests.sh -c --with-selenium"
+
 notifications:
   irc:
     - "chat.freenode.net#opendaylight-dlux"
