--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,10 @@ language: python
 python:
   - "2.6"
   - "2.7"
-cache: pip
-install: "pip install -r requirements.txt -r test-requirements.txt"
+cache: 
+  - pip
+install: 
+  - "pip install -r requirements.txt -r test-requirements.txt"
 script: 
   - tox -e pep8
   - "./run_tests.sh -c -V --with-selenium"
