--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,10 @@ before_install:
 install: 
   - "pip install -r requirements.txt -r test-requirements.txt"
 before_script:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-  - python manage.py runserver &
-  - sleep 3
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - "python manage.py runserver &"
+  - "sleep 3"
 script: 
   - "./run_tests.sh -N pep8"
   - "./run_tests.sh -N --with-selenium"
